# uno_mex

./: .gitignore  CMakeLists.txt
include/: nlp.hpp
matlab/: uno_test.m
src/: get_options.cpp  main.cpp
